2007-03-10  Sebastien Moutte  <sebastien@moutte.net>

	* gst/gstbin.c:(gst_bin_add):
	Use GST_STR_NULL to prevent NULL pointer to be passed to GST_CAT_DEBUG.
	* win32/common/libgstbase.def:
	* win32/common/libgstreamer.def:
	Add new exported functions.

2007-03-09  Wim Taymans  <wim@fluendo.com>

	* docs/plugins/gstreamer-plugins-sections.txt:
	Fix GstTee docs.

2007-03-09  Wim Taymans  <wim@fluendo.com>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstbuffer.c: (gst_buffer_copy_metadata), (_gst_buffer_copy):
	* gst/gstbuffer.h:
	Add metadata copy functions. Fixes #393099.

	* gst/gstutils.c: (gst_buffer_stamp):
	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer):
	Use new metadata copy functions.

2007-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* plugins/elements/gstidentity.c: (gst_identity_class_init),
	(gst_identity_init), (gst_identity_check_perfect),
	(gst_identity_check_imperfect_timestamp),
	(gst_identity_check_imperfect_offset), (gst_identity_transform_ip),
	(gst_identity_set_property), (gst_identity_get_property):
	* plugins/elements/gstidentity.h:
	Separate out check-imperfect-timestamp and check-imperfect-offset.
	Put back check-perfect as it was to keep compatibility.

2007-03-09  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstelement.c: (gst_element_dispose):
	There's no need to warn if VOID_PENDING is not NONE here, as
	long as the state is NULL it's ok, and that's checked immediately
	above.

2007-03-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* plugins/elements/gstidentity.c: (gst_identity_check_perfect):
	Fix check for perfect stream to ignore buffers with -1 
	offsets/offset ends when checking data contiguity.

2007-03-08  Wim Taymans  <wim@fluendo.com>

	* tools/gst-launch.c: (event_loop):
	Print INFO messages.

2007-03-08  Wim Taymans  <wim@fluendo.com>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_sink_eventfunc),